--- a/src/style/nav.module.css
+++ b/src/style/nav.module.css
@@ -3,12 +3,13 @@ nav {
   flex-direction: row;
   width: 100%;
   height: 100px;
-  background: #a70e0e;
+  background: rgb(167, 14, 14);
   color: #fff;
   padding: 12px 24px;
   box-sizing: border-box;
   justify-content: space-between;
   align-items: center;
+  box-shadow: 0 2px 10px 2px rgba(167, 14, 14, .5);
 }
 
 .pageTitle h1 {
