--- a/src/style/footer.module.css
+++ b/src/style/footer.module.css
@@ -1,5 +1,6 @@
 footer {
     width: 100%;
+    height: 75px;
     background: #000;
     color: #fff;
     box-shadow: 0 -2px 10px 2px rgba(0,0,0,.5);
@@ -7,6 +8,5 @@ footer {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    position: fixed;
-    bottom: 0;
+    margin-top: 24px;
 }
