--- a/src/App.css
+++ b/src/App.css
@@ -107,3 +107,25 @@
 .body.about ol, .body.about li{
   text-transform: none !important;
 }
+
+.compare-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.compare {
+  width: 49%;
+  background-color: #ddd;
+}
+.compare:first-child{
+  margin-right: 1%;
+}
+.compare:last-child{
+  margin-left: 1%;
+}
+pre {
+  text-align: left;
+}
