--- a/src/App.css
+++ b/src/App.css
@@ -129,3 +129,24 @@
 pre {
   text-align: left;
 }
+
+.body.shop{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.juego-small{
+  width: 300px;
+  overflow: hidden;
+  background: #eee;
+  margin-bottom: 36px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px 2px rgba(0,0,0,.3);
+}
+
+.juego-small img{
+  width: 100%;
+}
